# Hypergraph-Vectorization-recipes

./: .gitignore  README.md  environment.yml  hypergraphs-simple.yml  pyproject.toml  recipes_datamapplot.html
.ipynb_checkpoints/: README-checkpoint.md  environment-checkpoint.yml
data/: recipes.parquet
notebooks/: 00-data-setup.py  recipe-annotations.parquet  recipes-00-data-setup.ipynb  recipes-03-joint-annotated.ipynb  recipes-03-joint-embedding.ipynb  recipes-03A-joint.ipynb  recipes-04-tnt-hypergraph_viz.ipynb  recipes-06-datamapplot.ipynb
notebooks/.ipynb_checkpoints/: 00-data-setup-checkpoint.py  recipes-00-data-setup-checkpoint.ipynb  recipes-01A-simple-first-checkpoint.ipynb  recipes-03-joint-annotated-checkpoint.ipynb  recipes-03A-joint-checkpoint.ipynb  recipes-04-tnt-hypergraph_viz-checkpoint.ipynb
