[project]
name = "hypergraph-vectorization-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fast-hdbscan<0.3",
    "huggingface-hub>=1.8.0",
    "hypernetx>=2.4.0",
    "ipywidgets>=8",
    "jupyterlab>=4.5.6",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "python-igraph>=1.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "timc-vector-toolkit>=20250919",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = true

[dependency-groups]
dev02 = [
    "ipywidgets==8.1.8",
]
